src/test/ui/closures/2229_closure_analysis/filter-on-struct-member.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/filter-on-struct-member.rs:3:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: Capturing self[Deref,(0, 0)] -> ImmBorrow
  --> $DIR/filter-on-struct-member.rs:26:17
   |
LL |             |v| self.filter.allowed(*v),
   |                 ^^^^^^^^^^^

error: Min Capture self[Deref,(0, 0)] -> ImmBorrow
  --> $DIR/filter-on-struct-member.rs:26:17
   |
LL |             |v| self.filter.allowed(*v),
   |                 ^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

